--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "lint": "eslint *.js __tests__/**/*.js",
     "test:integration": "jest __tests__/integration/*.test.js",
     "test": "yarn test:integration"
   },
